# memes-bot

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/rules/: fetchers.md  generators.md  publishers.md  scheduler.md  storage.md
config/: settings.py  templates.json  voice.json
docs/: SETUP.md  TROUBLESHOOTING.md  plan.md
scripts/: setup.sh
src/: main.py
src/fetchers/: news.py  sentiment.py  trending.py
src/generators/: caption.py  meme.py  picker.py  types.py
src/publishers/: telegram.py  twitter.py
src/scheduler/: jobs.py
src/storage/: db.py  models.py  repository.py
src/utils/: dedup.py  llm.py  logger.py  time_windows.py
tasks/: 01-foundation.md  02-storage.md  03-fetchers-easy.md  04-time-windows.md  05-generators.md  06-fetcher-news.md  07-telegram-publisher.md  08-twitter-publisher.md  09-scheduler-main.md  10-tests.md  TASKLIST.md
tests/: conftest.py  test_caption.py  test_dedup.py  test_picker.py  test_time_windows.py
tests/fixtures/: sample_news.json
