[project]
name = "crypto-meme-bot"
version = "0.1.0"
description = "Automated crypto meme pipeline: news -> Imgflip -> Telegram approval -> X."
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
